fixed spacing in icons

--- a/src/quick-dialog/quick-dialog.css
+++ b/src/quick-dialog/quick-dialog.css
@@ -57,7 +57,7 @@
 
 .DNNModuleContent .sc-uninitialized div[class^='icon-sxc-']:before,
 .DNNModuleContent .sc-uninitialized div[class*=' icon-sxc-']:before {
-  margin-left: 0.3em;
+  /* margin-left: 0.3em; */
   margin-top: 0.6em;
 }
 
